apps/infrastructure/longhorn/resources/longhorn-host-initializer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-host-initializer
  namespace: longhorn-system
  labels:
    app: longhorn-host-initializer
spec:
  selector:
    matchLabels:
      name: longhorn-host-initializer
  template:
    metadata:
      labels:
        name: longhorn-host-initializer
    spec:
      tolerations:
        - operator: Exists
          effect: NoSchedule

      hostNetwork: true
      hostPID: true

      containers:
        - name: sleep-forever
          image: registry.k8s.io/pause:3.10
          resources:
            limits:
              cpu: 10m
              memory: 16Mi
            requests:
              cpu: 10m
              memory: 16Mi
