apps/infrastructure/longhorn/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - __HOSTNAME__
      secretName: longhorn-web-ui-tls

  rules:
    - host: __HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
